# airline-customer-support-agent-python

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
.relai/: learning-env-context.json  mock-manifest.json  optimizer-learning-envs.json  runtime-manifest.json  simulator.env.example  tags.json
.relai/benchmark_csv/: f63fe6a2-27b3-485d-9c1c-10ef9cd45b08.csv
.relai/benchmarks/: airline-support-suite.py
.relai/evaluators/: response-token.py
.relai/learning-envs/: off-topic-guardrail.py  response-signoff.py
.relai/simulator/: SDK_REFERENCE.md  check.sh  install.sh  pyproject.toml  run.sh
.relai/simulator/frameworks/: openai-agents.md
.relai/simulator/src/relai_simulator/: adapter.py  adapter_contract.py  runner.py
src/airline_support/: __init__.py  agent.py  main.py  sessions.py  walkthrough.py
tests/: test_api.py  test_sessions.py  test_walkthrough.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx  styles.css
web/components/: setup-gate.tsx  tour.tsx  track-picker.tsx
web/components/ui/: dropdown-menu.tsx  scroll-area.tsx
