[project]
name = "relai-airline-onboarding"
version = "0.1.0"
description = "Guided RELAI CLI onboarding app for a Python SDK airline support agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai-agents>=0.3.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airline_support"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
