[project]
name = "relai-simulator"
version = "0.1.0"
description = "Local RELAI simulator harness."
requires-python = ">=3.11"
dependencies = [
    "relai==0.1.24",
]

[project.scripts]
relai-simulator-runner = "relai_simulator.runner:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "relai"
url = "http://localhost:8889/sdk/simple/"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
relai = { index = "relai" }
